--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,55 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Главная</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-        }
-
-        h1 {
-            margin: 0;
-            padding: 0;
-        }
-
-        main {
-            padding: 20px;
-            text-align: center;
-        }
-
-        a {
-            text-decoration: none;
-            color: #fff;
-            background-color: #007bff;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        a:hover {
-            background-color: #0069d9;
-        }
-    </style>
+    <title>Главная страница</title>
 </head>
 <body>
-<header>
-    <h1>Добро пожаловать, <span th:text="${username}"></span>!</h1>
-</header>
-<main>
-    <a href="/logout">Выход</a>
-</main>
+<h2>Добро пожаловать на главную страницу!</h2>
+<a href="/logout-success">Выйти</a> <!-- Ссылка для выхода -->
 </body>
 </html>
-
